name:                hagemai
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/yoshitsugu/hagemai#readme
license:             MIT
license-file:        LICENSE
author:              Kota Yoshitsugu
maintainer:          Kota Yoshitsugu
copyright:           2015 Yoshitsugu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hagemai
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , servant                               
                     , servant-server
                     , servant-blaze
                     , blaze-html
                     , wai
                     , warp
                     , aeson
                     , text
                     , either
                     , relational-record
                     , relational-query
                     , HDBC
                     , HDBC-mysql
                     , relational-query-HDBC
                     , persistable-record
                     , template-haskell
                     , transformers
                     , time
                     , directory
  ghc-options:         -Wall -threaded              
  other-modules:       Issue
                     , Comment
                     , DataSource
                     , IndexPage
                     